--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Run PowerShell VM script
         shell: pwsh
         run: |
-          ./CreateWinVm.ps1
+          ./CreateWinVm.ps1 *>output.txt
